[gd_scene load_steps=22 format=3 uid="uid://dlgyv2fwfgtc"]

[ext_resource type="Texture2D" uid="uid://b8j3ij2i405eb" path="res://assets/basic_enemy/brown_rat.png" id="1_1e36c"]
[ext_resource type="Script" uid="uid://gijgw4qelh83" path="res://scenes/game_object/basic_enemy/basic_enemy.gd" id="1_yhnve"]
[ext_resource type="Script" uid="uid://cdebnw2be0h4n" path="res://scenes/component/health_component.gd" id="2_iwad1"]
[ext_resource type="PackedScene" uid="uid://crxkkpnilu2mh" path="res://scenes/component/random_stream_player_2d_component.tscn" id="2_jimn8"]
[ext_resource type="PackedScene" uid="uid://c1cod5mcn2ndi" path="res://scenes/component/experience_drop_component.tscn" id="3_bftxh"]
[ext_resource type="AudioStream" uid="uid://chakjoiaheor5" path="res://assets/sfx/enemy_hit_sfx/footstep_carpet_000.ogg" id="3_qku51"]
[ext_resource type="PackedScene" uid="uid://bs020fxfy7e4w" path="res://scenes/component/hurtbox_component.tscn" id="4_78yai"]
[ext_resource type="PackedScene" uid="uid://br5vvohyfpt8d" path="res://scenes/component/velocity_component.tscn" id="4_jkye5"]
[ext_resource type="AudioStream" uid="uid://dhyy64ykf5y1h" path="res://assets/sfx/enemy_hit_sfx/footstep_carpet_001.ogg" id="4_ws2by"]
[ext_resource type="AudioStream" uid="uid://beymfym2tfofs" path="res://assets/sfx/enemy_hit_sfx/footstep_carpet_002.ogg" id="5_fcdwx"]
[ext_resource type="AudioStream" uid="uid://b3njj6lgv6ia8" path="res://assets/sfx/enemy_hit_sfx/footstep_carpet_003.ogg" id="6_26myy"]
[ext_resource type="PackedScene" uid="uid://ccggxp0t2tyyk" path="res://scenes/component/death_component.tscn" id="6_bq7hi"]
[ext_resource type="Shader" uid="uid://dig4yuyxy3v6w" path="res://scenes/component/hit_flash_component.gdshader" id="6_t4oqy"]
[ext_resource type="AudioStream" uid="uid://0rp0xke4pl2y" path="res://assets/sfx/enemy_hit_sfx/footstep_carpet_004.ogg" id="7_nb0jk"]
[ext_resource type="PackedScene" uid="uid://ctowyr2y5ct1m" path="res://scenes/component/hit_flash_component.tscn" id="8_v58qd"]

[sub_resource type="Animation" id="Animation_bq7hi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_elloc"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bq7hi"]
_data = {
&"RESET": SubResource("Animation_bq7hi"),
&"walk": SubResource("Animation_elloc")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yyp5f"]
resource_local_to_scene = true
shader = ExtResource("6_t4oqy")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hrqtl"]
radius = 12.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_5t1dv"]
radius = 5.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_yhnve")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bq7hi")
}
autoplay = "walk"

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("2_jimn8")]
streams_array = Array[AudioStream]([ExtResource("3_qku51"), ExtResource("4_ws2by"), ExtResource("5_fcdwx"), ExtResource("6_26myy"), ExtResource("7_nb0jk")])
"is_p√≠tch_randomized" = true
random_pitch_variation = 1.2

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_iwad1")
max_health = 20

[node name="ExperienceDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_bftxh")]
drop_percent = 0.35
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_jkye5")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("8_v58qd")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_yyp5f")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_bq7hi")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_78yai")]
collision_layer = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_hrqtl")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_1e36c")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_5t1dv")
